# MultiThreadedAPIClient

./: .gitignore  CMakeLists.txt  README.md
include/: APIClient.h
src/: APIClient.cpp  main.cpp
tests/: APIClientTest.cpp
